--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,8 +1,8 @@
-body{
-    font-family: 'Roboto';
-    text-align: center;
+body {
+	font-family: "Roboto", sans-serif;
+	text-align: center;
 }
 
-img{
-    width: 300px;
+img {
+	width: 300px;
 }
