--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
-@import '_mixins.scss';
-@import '_reset.scss';
-@import '_fonts.scss';
-@import '_vars.scss';
-@import '_header.scss';
-@import '_main.scss';
-@import '_footer.scss';
+@import "mixins";
+@import "reset";
+@import "fonts";
+@import "vars";
+@import "header";
+@import "main";
+@import "footer";
